# embedded

./: Cargo.toml  Readme.md
.cargo/: config.toml
