[package]
edition = "2021"
name = "embedded"
rust-version = "1.86"
version = "0.1.0"

[[bin]]
name = "hello_world"
path = "./src/bin/hello_world.rs"

[[bin]]
name = "blinky_rgb"
path = "./src/bin/blinky_rgb.rs"

[dependencies]
defmt = "1.0.1"
esp-bootloader-esp-idf = { version = "0.2.0", features = ["esp32c6"] }
esp-hal = { version = "=1.0.0-rc.0", features = [
  "defmt",
  "esp32c6",
  "unstable",
] }

critical-section = "1.2.0"
esp-backtrace = { version = "0.17.0", features = [
  "defmt",
  "esp32c6",
  "exception-handler",
  "panic-handler",
] }
esp-println = { version = "0.15.0", features = ["defmt-espflash", "esp32c6"] }
smart-leds = "0.4.0"
esp-hal-smartled = "0.16.0"


[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
